# DSM

./: .gitignore  CMakeLists.txt  build.sh  main  main.c  main.cpp  service.sh
.cph/: .main.cpp_5231c6884d562a9c5980806cbe4a5e15.prob
experimental/: server.c
headers/: Status_codes.hpp  clientsCommand.h  clientsCommand.hpp  connection.h  connection.hpp  serverService.h  serverService.hpp  shareFile.hpp  sockets.hpp  threadSafety.h
src/: Status_codes.cpp  clientsCommand.c  clientsCommand.cpp  connection.c  connection.cpp  serverService.c  serverService.cpp  tcpServer.c  tcpServer.cpp  threadSafety.c  threadSafety.cpp  udpServer.c  udpServer.cpp
src/Sockets/: linuxSockets.cpp  windowsSockets.cpp
src/clientsCommands/: Distributive_Systems.cpp  connect.c  connect.cpp  exit.c  exit.cpp  handleStatus.c  handleStatus.cpp  listConnections.c  listConnections.cpp  receivingFile.cpp  sendingFile.cpp
src/clientsCommands/DistributiveComputing/: Distributive_Systems.cpp
src/serverCommands/: connect.c  connect.cpp  distributiveComputing.cpp  handleStatus.c  handleStatus.cpp  handle_receive_file_server.cpp  receiveFile.cpp
src/shareFileService/: shareFileClient.cpp  shareFileServer.cpp
